--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,13 +17,14 @@
   <div id="root"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.js"></script>
 </body>
 <script>
   lightbox.option({
     'positionFromTop': 200,
     'wrapAround': true,
     'disableScrolling': true
-  })
+  });
 </script>
 
 </html>
